optimized, before norm

--- a/PushSwap/Makefile
+++ b/PushSwap/Makefile
@@ -18,7 +18,7 @@ OBJECTS					=	usage.o\
 							fill_stack.o\
 							ft_operators.o\
 							solve_quick.o\
-							solve_quick_sub.o\
+							solve_quick_sub.o solve_quick_sub2.o\
 							solve_quick_btoa.o\
 							under3_a.o under3_b.o\
 							main_pushswap.o\
@@ -60,6 +60,7 @@ usage.o					:	$(SRC)usage.c $(HEADERS)
 
 solve_quick.o			:	$(SRC)solve_quick.c $(HEADERS)
 solve_quick_sub.o		:	$(SRC)solve_quick_sub.c $(HEADERS)
+solve_quick_sub2.o		:	$(SRC)solve_quick_sub2.c $(HEADERS)
 solve_quick_btoa.o		:	$(SRC)solve_quick_btoa.c $(HEADERS)
 under3_a.o				:	$(SRC)under3_a.c $(HEADERS)
 under3_b.o				:	$(SRC)under3_b.c $(HEADERS)
